@@ -68,6 +68,7 @@ release 0.14.4
 	* optimized memory usage when checking files fails
 	* fixed bug when checking a torrent twice
 	* improved handling of out-of-memory conditions in disk I/O thread
+	* fixed bug when force-checking a torrent with partial pieces
 
 release 0.14.3
 
